--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,4 @@
 body {
-    /* la font déclarée ici ne s'applique pas partout (ex : barre de recherche). Trouver pourquoi. */
     max-width: 1400px;
     font-family: 'Raleway';
 }
@@ -61,7 +60,8 @@ h1 {
     font-size: 22px;
 }
 
-p {
+.subtitle {
+    margin-top: -8px;
     font-weight: 400;
     font-size: 16px;
 }
@@ -86,13 +86,12 @@ p {
 }
 
 .research_input {
-    /* trouver comment mettre la couleur noire au texte */
     width: 232px;
-    font-size: 100%;
+    font-size: 18px;
     font-family: Raleway;
     font-weight: 700;
     padding-left: 17px;
-    border-left: none;
+    border: 0;
     border: 1px solid #F2F2F2;
 }
 
@@ -101,8 +100,291 @@ p {
     color: white;
     font-family: Raleway;
     font-weight: 700;
-    font-size: 100%;
+    font-size: 18px;
     border: 1px solid #0065FC;
     border-radius: 0px 15px 15px 0px;
     width: 132px;
+}
+
+/* barre des filtres */
+
+.filters_bar {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 46px;
+}
+
+.filter {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    border: 2px solid #D9D9D9;
+    border-radius: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.filter_word {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 20px;
+    padding-left: 10px;
+}
+
+.filter:hover {
+    background-color: #DEEBFF;
+}
+
+.fa-money-bill-wave {
+    color: #0065FC;
+}
+
+.fa-person {
+    color: #0065FC;
+}
+
+.fa-heart {
+    color: #0065FC;
+}
+
+.fa-dog {
+    color: #0065FC;
+}
+
+/* barre d'info */
+
+.info_bar {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+}
+
+.info_circle {
+    border: 1px solid #D9D9D9;
+    border-radius: 25px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-right: 11px;
+}
+
+.fa-info {
+    color: #0065FC;
+}
+
+/* section hébergements à Marseille */
+
+.logements_h1 {
+    padding-left: 28px;
+}
+
+#logements {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logement_article {
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    width: 880px;
+    height: 626px;
+}
+
+.logements_cards {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.logement_card {
+    width: 256px;
+    height: 204px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 30px;
+}
+
+.logement_card_img img {
+    width: 246px;
+    height: 124px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+
+.logement_card_info {
+    padding-left: 16px;
+}
+
+.logement_card_title {
+    font-weight: 700;
+    font-size: 16px;
+    padding-bottom: 5px;
+}
+
+.logement_card_price {
+    font-weight: 400;
+    font-size: 14px;
+    padding-bottom: 5px;
+}
+
+.logement_card_stars {
+    display: flex;
+}
+
+.fa-star {
+    font-size: 12px;
+    width: 9px;
+}
+
+.logement_card_stars_blue {
+    color: #0065FC;
+}
+
+.logement_card_stars_grey {
+    color: #D9D9D9;
+    padding-left: 5px;
+}
+
+.logement_card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.logement_see_more {
+    padding-top: 10px;
+    padding-left: 28px;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+/* aside Les plus populaires */
+
+.famous_aside {
+    background-color: #F2F2F2;
+    width: 420px;
+    height: 625px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.famous_head {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.fa-chart-line {
+    color: #0065FC;
+}
+
+.famous_cards_container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.famous_card {
+    display: flex;
+    width: 343px;
+    height: 153px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 33px;
+}
+
+.famous_card_img img {
+    width: 137px;
+    height: 144px;
+    object-fit: cover;
+    border-radius: 20px 0px 0px 20px;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+
+.famous_card_info {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    margin-left: 15px;
+    margin-top: 16px;
+}
+
+.famous_card_title {
+    align-self: start;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.famous_card_price {
+    align-self: start;
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: -20px;
+}
+
+.famous_card_stars {
+    display: flex;
+    padding-bottom: 5px;
+}
+
+.famous_card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Activités */
+
+.activities_cards_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.activities_card {
+    width: 302px;
+    height: 444px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.activities_card_img img {
+    width: 302px;
+    height: 389px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.activities_location {
+    font-weight: 700;
+    padding-left: 19px;
+}
+
+.activities_card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* footer */
+
+#footer {
+    display: flex;
+    justify-content: space-around;
+    background-color: #F2F2F2;
+    margin-top: 60px;
+}
+
+.footer_titles {
+    font-weight: 700;
+    padding-bottom: 10px;
 }
