--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,82 +1,69 @@
+/* all */
+
+* a {
+    color: black;
+    text-decoration: none;
+}
+
+/* desktop version */
+
 body {
     max-width: 1400px;
     font-family: 'Raleway';
+    margin: 0 3% 0 3%;
 }
 
-/* header */
+/* header desktop */
+
 #header {
-    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#logo img {
+    padding-top: 55px;
+    width: 61px;
+    height: 19px;
+}
+
+#menu {
     display: flex;
     justify-content: space-between;
 }
 
-.logo {
-    padding-top: 44px;
-}
-
-.logo img {
-    width: 60px;
-}
-
-.menu {
-    display: flex;
-    justify-content: space-between;
-}
-
-.menu_logements {
+.menu-item {
+    font-weight: 500;
     text-decoration: none;
     color: black;
-    position: relative;
     border-top: 2px white solid;
-    padding-top: 46px;
+    padding-top: 60px;
     padding-left: 10px;
     padding-right: 24px;
 }
 
-.menu_logements:hover {
+.menu-item:hover {
     color: #0065FC;
     border-top-color: #0065FC;
 }
 
-.menu_activities {
-    text-decoration: none;
-    color: black;
-    position: relative;
-    border-top: 2px white solid;
-    padding-top: 46px;
-    padding-left: 24px;
-    padding-right: 10px;
-}
+/* title & subtitle desktop */
 
-.menu_activities:hover {
-    color: #0065FC;
-    border-top-color: #0065FC;
-}
-
-/* titres et paragraphes */
-
-h1 {
+#top h1 {
     font-weight: 700;
     font-size: 22px;
+    margin: 4% 0 -10px 0;
 }
 
-.subtitle {
-    margin-top: -8px;
-    font-weight: 400;
-    font-size: 16px;
-}
+/* research desktop */
 
-/* barre de recherche */
-
-.research_bar {
+#research-bar {
     display: flex;
-    border-radius: 15px;
-    width: 464px;
+    width: 449px;
     height: 49px;
-
 }
 
-.research_icon {
+#research-icon {
     display: flex;
     background-color: #F2F2F2;
     border-radius: 15px 0px 0px 15px;
@@ -85,17 +72,21 @@ h1 {
     align-items: center;
 }
 
-.research_input {
+#research-icon i {
+    font-size: larger;
+}
+
+#research-input {
     width: 232px;
     font-size: 18px;
     font-family: Raleway;
     font-weight: 700;
-    padding-left: 17px;
-    border: 0;
     border: 1px solid #F2F2F2;
+    padding-left: 15px;
 }
 
-.research_button {
+#research-button {
+    width: 132px;
     background-color: #0065FC;
     color: white;
     font-family: Raleway;
@@ -103,140 +94,166 @@ h1 {
     font-size: 18px;
     border: 1px solid #0065FC;
     border-radius: 0px 15px 15px 0px;
-    width: 132px;
 }
 
-/* barre des filtres */
+#research-button i {
+    display: none;
+}
 
-.filters_bar {
+/* filters desktop */
+
+#filter-bar {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    margin-top: 46px;
+    margin: 2% 0;
+}
+
+#filter-title {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+#all-filters {
+    display: flex;
+    justify-content: space-between;
+    width: 40%;
 }
 
 .filter {
     display: flex;
+    justify-content: center;
     align-items: center;
     height: 40px;
     border: 2px solid #D9D9D9;
     border-radius: 25px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 3px 11px 3px 11px;
+    margin-right: 2%;
+    margin-left: 2%;
 }
 
-.filter_word {
+.filter span {
+    width: 100%;
     font-weight: 700;
     font-size: 17px;
-    line-height: 20px;
-    padding-left: 10px;
+    margin-left: 10px;
+    white-space: nowrap;
 }
 
-.filter:hover {
+#filter:hover {
     background-color: #DEEBFF;
 }
 
 .fa-money-bill-wave {
+    font-size: larger;
     color: #0065FC;
 }
 
 .fa-person {
+    font-size: larger;
     color: #0065FC;
 }
 
 .fa-heart {
+    font-size: larger;
     color: #0065FC;
 }
 
 .fa-dog {
+    font-size: large;
     color: #0065FC;
 }
 
-/* barre d'info */
+/* info desktop */
 
-.info_bar {
+#info-bar {
     display: flex;
+    width: 33%;
     align-items: center;
-    justify-content: flex-start;
-
+    justify-content: space-between;
 }
 
-.info_circle {
+#info-circle {
     border: 1px solid #D9D9D9;
     border-radius: 25px;
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-right: 11px;
+    padding: 1px 9px 2px 9px;
 }
 
 .fa-info {
     color: #0065FC;
+    font-size: 12px;
 }
 
-/* section hébergements à Marseille */
-
-.logements_h1 {
-    padding-left: 28px;
+#info-bar p {
+    margin-left: 3%;
+    white-space: nowrap;
 }
 
-#logements {
+/* main section desktop */
+
+#main-section {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 3%;
 }
 
-.logement_article {
+/* article desktop */
+
+#logement-article {
     background-color: #F2F2F2;
     border-radius: 20px;
-    width: 880px;
-    height: 626px;
+    width: 68%;
 }
 
-.logements_cards {
+#logement-article h2 {
+    font-weight: 700;
+    font-size: 22px;
+    margin-left: 4%;
+    margin-top: 3%;
+}
+
+#logements-cards-container {
+    width: 100%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
-.logement_card {
-    width: 256px;
+.logement-card {
+    width: 246px;
     height: 204px;
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    margin-bottom: 30px;
+    margin-bottom: 2.5%;
 }
 
-.logement_card_img img {
+.logement-card-img img {
     width: 246px;
     height: 124px;
     object-fit: cover;
     border-radius: 20px 20px 0px 0px;
-    padding-left: 5px;
-    padding-top: 5px;
+    border: 5px solid white;
+    box-sizing: border-box;
 }
 
-.logement_card_info {
-    padding-left: 16px;
+.logement-card-info {
+    margin-left: 15px;
 }
 
-.logement_card_title {
+.logement-card-title {
     font-weight: 700;
     font-size: 16px;
-    padding-bottom: 5px;
+    margin-bottom: 2%;
 }
 
-.logement_card_price {
+.logement-card-price {
     font-weight: 400;
     font-size: 14px;
-    padding-bottom: 5px;
+    margin-bottom: 2%;
 }
 
-.logement_card_stars {
+.logement-card-stars {
     display: flex;
 }
 
@@ -245,146 +262,470 @@ h1 {
     width: 9px;
 }
 
-.logement_card_stars_blue {
+.logement-card-stars-blue {
     color: #0065FC;
 }
 
-.logement_card_stars_grey {
+.logement-card-stars-grey {
     color: #D9D9D9;
     padding-left: 5px;
 }
 
-.logement_card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+.logement-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
 
-.logement_see_more {
-    padding-top: 10px;
-    padding-left: 28px;
+#logement-see-more p {
+    margin-left: 4%;
     font-weight: 700;
     font-size: 18px;
 }
 
-/* aside Les plus populaires */
+/* aside desktop */
 
-.famous_aside {
-    background-color: #F2F2F2;
-    width: 420px;
-    height: 625px;
-    border-radius: 20px;
+#famous-aside {
     display: flex;
     flex-direction: column;
+    background-color: #F2F2F2;
+    width: 30%;
+    height: 625px;
+    border-radius: 20px;
 }
 
-.famous_head {
+#famous-head {
+    margin-top: 3%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+#famous-head h2 {
+    font-weight: 700;
+    font-size: 22px;
 }
 
 .fa-chart-line {
     color: #0065FC;
 }
 
-.famous_cards_container {
+#famous-cards-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
-.famous_card {
+.famous-card {
     display: flex;
-    width: 343px;
-    height: 153px;
+    width: 85%;
+    height: 144px;
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    margin-bottom: 33px;
+    margin-bottom: 10%;
 }
 
-.famous_card_img img {
+.famous-card-img img {
     width: 137px;
     height: 144px;
     object-fit: cover;
+    border: 5px solid white;
     border-radius: 20px 0px 0px 20px;
-    padding-left: 5px;
-    padding-top: 5px;
+    box-sizing: border-box;
 }
 
-.famous_card_info {
+.famous-card-info {
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-end;
-    margin-left: 15px;
-    margin-top: 16px;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 1%;
 }
 
-.famous_card_title {
-    align-self: start;
+.famous-card-title {
     font-weight: 700;
     font-size: 16px;
+    margin-bottom: 7px;
 }
 
-.famous_card_price {
-    align-self: start;
+.famous-card-price {
     font-weight: 400;
     font-size: 14px;
-    margin-top: -20px;
 }
 
-.famous_card_stars {
+.famous-card-stars {
     display: flex;
-    padding-bottom: 5px;
 }
 
-.famous_card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+.famous-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
 
-/* Activités */
+/* activities desktop */
 
-.activities_cards_container {
+#activities h1 {
+    font-weight: 700;
+    font-size: 22px;
+}
+
+#activities-cards-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.activities_card {
-    width: 302px;
-    height: 444px;
+.activities-card {
+    width: 22%;
+    min-width: 172px;
+    height: 445px;
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
 
-.activities_card_img img {
-    width: 302px;
+.activities-card-img img {
+    width: 100%;
     height: 389px;
     object-fit: cover;
     border-radius: 20px 20px 0px 0px;
 }
 
-.activities_location {
+.activities-location {
     font-weight: 700;
-    padding-left: 19px;
+    padding: 5%;
 }
 
-.activities_card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+.activities-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
 
-/* footer */
+/* footer desktop */
 
 #footer {
     display: flex;
     justify-content: space-around;
     background-color: #F2F2F2;
     margin-top: 60px;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-top: 40px;
+    padding-bottom: 50px;
 }
 
-.footer_titles {
+#footer h3 {
     font-weight: 700;
-    padding-bottom: 10px;
+}
+
+/* medias querries */
+
+/* pad version */
+
+@media screen and (max-width: 992px) {
+
+    body {
+        max-width: 992px;
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+
+    /* main section pad */
+
+    /* logements article pad */
+
+    #main-section {
+        display: block;
+    }
+
+    #logement-article {
+        width: 100%;
+    }
+
+    #logement-article h2 {
+        padding-top: 2%;
+    }
+
+    #logement-see-more p {
+        padding-bottom: 5%;
+    }
+
+    /* famous article pad*/
+
+    #famous-aside {
+        width: 100%;
+        height: 278px;
+    }
+
+    #famous-head {
+        justify-content: space-between;
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+    }
+
+    #famous-cards-container {
+        justify-content: space-around;
+        flex-wrap: nowrap;
+    }
+
+    .famous-card {
+        width: 30%;
+        height: 144px;
+    }
+
+    .famous-card-img img {
+        width: 106px;
+    }
+
+    .famous-card-title {
+        font-weight: 700;
+        font-size: 14px;
+    }
+
+    .famous-card-price {
+        font-size: 13px;
+    }
+
+    /* activities pad */
+
+    .activities-card {
+        height: 260px;
+    }
+
+    .activities-card-img img {
+        height: 211px;
+    }
+
+    .activities-location {
+        font-size: 14px;
+    }
+}
+
+/* mobile version */
+
+@media screen and (max-width: 768px) {
+
+    body {
+        max-width: 768px;
+        margin: 0 auto;
+    }
+
+    /* header mobile */
+
+    #header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #menu {
+        width: 100%;
+        padding-bottom: 1%;
+        justify-content: center;
+    }
+
+    .menu-item {
+        width: 100%;
+        text-align: center;
+        padding: 50px 0px 20px 0px;
+        border-top: none;
+        border-bottom: 4px solid #F2F2F2;
+    }
+
+    .menu-item:hover {
+        border-bottom: 4px solid #0065FC;
+    }
+
+    /* section top mobile */
+
+    #top {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    /* research mobile */
+
+    #research-bar {
+        width: 100%;
+        padding-top: 20px;
+        padding-bottom: 30px;
+    }
+
+    #research-icon {
+        width: 15%;
+    }
+
+    #research-input {
+        width: 60%;
+    }
+
+    #research-button {
+        width: 15%;
+    }
+
+    #research-button span {
+        display: none;
+    }
+
+    #research-button i {
+        display: contents;
+    }
+
+    /* filters mobile */
+
+    #filter-bar {
+        width: 100%;
+        display: block;
+    }
+
+    #filter-title {
+        margin-left: 2%;
+        padding-bottom: 10px;
+    }
+
+    #all-filters {
+        width: 100%;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+    }
+
+    .filter {
+        width: 37%;
+        max-width: 160px;
+        margin-bottom: 15px;
+    }
+
+    .filter span {
+        font-size: 11px;
+        white-space: normal;
+    }
+
+    /* info mobile */
+
+    #info-bar {
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 100%;
+        padding-top: 20px;
+        padding-bottom: 30px;
+    }
+
+    #info-bar p {
+        margin: 2px 0px 0px 10px;
+        white-space: normal;
+    }
+
+    /* main section mobile */
+
+    #main-section {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    /* famous aside mobile */
+
+    #famous-head {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+
+    #famous-aside {
+        border-radius: 0;
+        height: 100%;
+    }
+
+    #famous-cards-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .famous-card {
+        width: 90%;
+        max-width: 500px;
+    }
+
+    .famous-card-img img {
+        width: 130px;
+    }
+
+    .famous-card-info {
+        justify-content: space-around;
+    }
+
+    .famous-card-stars {
+        margin-top: 40px;
+    }
+
+    /* logement article mobile */
+
+    #logement-article {
+        background-color: white;
+    }
+
+    #logement-article h2 {
+        margin-left: 6%;
+    }
+
+    .logement-card {
+        width: 90%;
+        max-width: 500px;
+    }
+
+    .logement-card-img {
+        width: 100%;
+    }
+
+    .logement-card-img img {
+        width: 100%;
+    }
+
+    .logement-card-info {
+        align-content: space-between;
+    }
+
+    .logement-card-title {
+        margin-bottom: 3px;
+    }
+
+    .logement-card-price {
+        margin-bottom: 3px;
+    }
+
+    #logement-see-more {
+        display: none;
+    }
+
+    /* activities mobile */
+
+    #activities h1 {
+        padding-top: 80px;
+        margin-left: 20px;
+    }
+
+    #activities-cards-container {
+        width: 100%;
+        height: 1100px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .activities-card {
+        width: 90%;
+        max-width: 500px;
+    }
+
+    .activities-card-img img {
+        width: 100%;
+    }
+
+    .activities-location {
+        padding: 12px;
+    }
+
+    /* footer mobile */
+
+    #footer {
+        width: 100%;
+        margin-left: 0;
+        flex-direction: column;
+        padding-left: 5%;
+    }
 }
