--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,10 +15,9 @@ body {
 
 /* header desktop */
 
-#header {
+header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 #logo img {
@@ -29,7 +28,6 @@ body {
 
 #menu {
     display: flex;
-    justify-content: space-between;
 }
 
 .menu-item {
@@ -105,7 +103,7 @@ body {
 #filter-bar {
     display: flex;
     align-items: center;
-    margin: 2% 0;
+    margin: 2% 0 2% 0;
 }
 
 #filter-title {
@@ -115,7 +113,6 @@ body {
 
 #all-filters {
     display: flex;
-    justify-content: space-between;
     width: 40%;
 }
 
@@ -127,19 +124,17 @@ body {
     border: 2px solid #D9D9D9;
     border-radius: 25px;
     padding: 3px 11px 3px 11px;
-    margin-right: 2%;
     margin-left: 2%;
 }
 
 .filter span {
-    width: 100%;
     font-weight: 700;
     font-size: 17px;
     margin-left: 10px;
     white-space: nowrap;
 }
 
-#filter:hover {
+.filter:hover {
     background-color: #DEEBFF;
 }
 
@@ -212,7 +207,6 @@ body {
 }
 
 #logements-cards-container {
-    width: 100%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -284,8 +278,6 @@ body {
 /* aside desktop */
 
 #famous-aside {
-    display: flex;
-    flex-direction: column;
     background-color: #F2F2F2;
     width: 30%;
     height: 625px;
@@ -345,7 +337,7 @@ body {
 .famous-card-title {
     font-weight: 700;
     font-size: 16px;
-    margin-bottom: 7px;
+    margin-bottom: 1%;
 }
 
 .famous-card-price {
@@ -448,7 +440,7 @@ body {
         padding-bottom: 5%;
     }
 
-    /* famous article pad*/
+    /* famous aside pad*/
 
     #famous-aside {
         width: 100%;
@@ -510,7 +502,7 @@ body {
 
     /* header mobile */
 
-    #header {
+    header {
         flex-direction: column;
         align-items: center;
     }
@@ -593,6 +585,7 @@ body {
     }
 
     .filter span {
+        width: 100%;
         font-size: 11px;
         white-space: normal;
     }
@@ -628,6 +621,7 @@ body {
 
     #famous-aside {
         border-radius: 0;
+        width: 100%;
         height: 100%;
     }
 
