--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,8 @@
 body {
     max-width: 1400px;
     font-family: 'Raleway';
-    margin: auto;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /* header desktop */
@@ -18,6 +19,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
+    margin-left: 2%;
 }
 
 #logo img {
@@ -44,6 +46,10 @@ header {
 }
 
 /* title & subtitle desktop */
+
+#top {
+    margin-left: 2%;
+}
 
 #top h1 {
     font-weight: 700;
@@ -195,6 +201,8 @@ article {
     background-color: #F2F2F2;
     border-radius: 20px;
     width: 68.8%;
+    margin-right: 3%;
+    margin-left: 2%;
 }
 
 article h2 {
@@ -279,6 +287,8 @@ aside {
     background-color: #F2F2F2;
     width: 29%;
     border-radius: 20px;
+    margin-right: 2%;
+    margin-left: auto;
 }
 
 #famous-head {
@@ -352,6 +362,11 @@ aside {
 
 /* activities desktop */
 
+#activities {
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
 #activities h1 {
     font-weight: 700;
     font-size: 22px;
@@ -413,8 +428,8 @@ footer h3 {
 
     body {
         max-width: 992px;
-        margin-left: 3%;
-        margin-right: 3%;
+        margin-left: auto;
+        margin-right: 4%;
     }
 
     /* main section pad */
@@ -441,7 +456,7 @@ footer h3 {
 
     aside {
         width: 100%;
-        height: 278px;
+        margin-left: 2%;
     }
 
     #famous-head {
@@ -475,6 +490,12 @@ footer h3 {
 
     /* activities pad */
 
+    #activities {
+        width: 100%;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+
     .activities-card {
         height: 260px;
     }
@@ -485,6 +506,14 @@ footer h3 {
 
     .activities-location {
         font-size: 14px;
+    }
+
+    /* footer pad version */
+
+    footer {
+        width: 100%;
+        margin-left: 2%;
+        margin-right: 2%;
     }
 }
 
