--- a/CSS/style.css
+++ b/CSS/style.css
@@ -169,6 +169,7 @@ header {
     width: 33%;
     align-items: center;
     justify-content: space-between;
+    padding-bottom: 20px;
 }
 
 #info-circle {
@@ -430,6 +431,13 @@ footer h3 {
         max-width: 992px;
         margin-left: auto;
         margin-right: 4%;
+    }
+
+
+    /* top pad */
+
+    #info-bar {
+        padding-bottom: 0;
     }
 
     /* main section pad */
